--- a/package.json
+++ b/package.json
@@ -18,18 +18,19 @@
   "license": "MIT",
   "dependencies": {
     "@opengsn/gsn": "2.1.0",
-    "ethers": "5.1.0",
-    "web3": "1.3.5",
-    "web3-providers-http": "1.3.5",
     "@openzeppelin/contracts": "3.3.0",
     "@uniswap/sdk": "3.0.3",
     "bnc-onboard": "1.19.1",
+    "ethers": "5.1.0",
     "next": "10.0.6",
     "qrcode.react": "1.0.1",
     "react": "17.0.1",
     "react-copy-to-clipboard": "5.0.3",
     "react-dom": "17.0.1",
-    "truffle-hdwallet-provider": "1.0.17"
+    "react-toastify": "^7.0.3",
+    "truffle-hdwallet-provider": "1.0.17",
+    "web3": "1.3.5",
+    "web3-providers-http": "1.3.5"
   },
   "repository": {
     "type": "git",
